--- a/client/src/components/QuizzesPage/CreateButton/index.module.scss
+++ b/client/src/components/QuizzesPage/CreateButton/index.module.scss
@@ -8,6 +8,8 @@
   cursor: pointer;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
+  user-select: none;
 
   &:after {
     content: '';
