--- a/client/src/components/Preloader/index.module.scss
+++ b/client/src/components/Preloader/index.module.scss
@@ -8,7 +8,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #1c1b2a;
+  
+  &_visibility {
+    background: #1c1b2a;
+  }
 
   &_exited {
     opacity: 0;
