--- a/client/src/components/Preloader/index.module.scss
+++ b/client/src/components/Preloader/index.module.scss
@@ -8,6 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background: rgba(28, 27, 42, 0.8);
   
   &_visibility {
     background: #1c1b2a;
