--- a/client/src/components/QuizControlPage/Viewer/index.module.scss
+++ b/client/src/components/QuizControlPage/Viewer/index.module.scss
@@ -7,43 +7,48 @@
   overflow: hidden;
 }
 
-.question {
+.buttonContainer {
   position: absolute;
-  left: 0;
+  right: 0;
   top: 0;
-  width: 100%;
+  width: 164px;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
+  pointer-events: none;
+}
 
-  &_exiting {
-    transition: transform 500ms;
-    transform: translate(-100%);
+.button {
+  width: 104px;
+  height: 92px;
+  opacity: 0;
+  cursor: pointer;
+  transition: opacity 200ms;
+  animation-name: pulse;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+
+  &_shown {
+    pointer-events: auto;
+    opacity: 1;
   }
 
-  &_exited {
-    transform: translate(100%);
-  }
-
-  &_entering {
-    transition: transform 500ms;
-    transform: translate(0%);
-  }
-
-  &_entered {
-    transform: translate(0%);
+  svg {
+    width: 100%;
+    height: 100%;
   }
 }
 
-.text {
-  width: 100%;
-  padding: 12px 50px;
-  background: #FFFFFF;
-  color: rgba(9, 21, 38, 0.85);
-  font-weight: bold;
-  font-size: 40px;
-  line-height: 48px;
-  text-align: center;
+@keyframes pulse {
+  0%,
+  100%,
+  50% {
+    transform: scale(1);
+  }
+
+  25%,
+  75% {
+    transform: scale(1.1);
+  }
 }
