--- a/client/src/components/QuizControlPage/Viewer/index.module.scss
+++ b/client/src/components/QuizControlPage/Viewer/index.module.scss
@@ -33,10 +33,22 @@
     pointer-events: auto;
     opacity: 1;
   }
+  
+  body:not(:global(.touch)) & {
+    &:hover {
+      svg path {
+        fill: #DEEFF3;
+      }
+    }
+  }
 
   svg {
     width: 100%;
     height: 100%;
+
+    path {
+      transition: fill 200ms;
+    }
   }
 }
 
