--- a/client/src/components/Timer/index.module.scss
+++ b/client/src/components/Timer/index.module.scss
@@ -17,13 +17,28 @@
 
 .text {
   font-weight: bold;
-  font-size: 64px;
-  line-height: 48px;
   color: #FFFFFF;
+
+  @media (min-width: 0) {
+    font-size: 18px;
+    line-height: 28px;
+  }
+
+  @media (min-width: 600px) {
+    font-size: 64px;
+    line-height: 48px;
+  }
 }
 
 .second {
   font-weight: bold;
-  font-size: 144px;
   color: #FFFFFF;
+
+  @media (min-width: 0) {
+    font-size: 40px;
+  }
+
+  @media (min-width: 600px) {
+    font-size: 144px;
+  }
 }
