--- a/client/src/components/QuizControlPage/index.module.scss
+++ b/client/src/components/QuizControlPage/index.module.scss
@@ -5,6 +5,7 @@
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
 	user-select: none;
+	overflow: hidden;
 }
 
 @keyframes gradient {
