--- a/client/src/components/QuizCreatingPage/Preview/index.module.scss
+++ b/client/src/components/QuizCreatingPage/Preview/index.module.scss
@@ -1,16 +1,55 @@
 .main {
-  display: flex;
+  position: relative;
   width: 100%;
   border: 2px dashed #D7DEE4;
   border-radius: 4px;
-  flex-direction: column;
-  align-items: center;
   background-size: cover;
   background-position: center;
+  height: 355px;
 
   &_fileSelected {
     border: none;
   }
+}
+
+.button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  width: 40px;
+  height: 40px;
+  padding: 10px;
+  background: #000;
+  border-radius: 50%;
+  transition: opacity 200ms;
+  opacity: 0;
+  cursor: pointer;
+
+  &_shown {
+    opacity: 0.4;
+  }
+
+  body:not(:global(.touch)) & {
+    &:hover {
+      opacity: 1;
+    }
+  }
+
+  svg {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.inner {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .cloud {
