--- a/client/src/components/QuizCreatingPage/index.module.scss
+++ b/client/src/components/QuizCreatingPage/index.module.scss
@@ -15,11 +15,20 @@
   box-shadow: 0px 4px 8px rgba(57, 78, 127, 0.2);
 }
 
+.backButton {
+  width: 120px;
+  flex-basis: 120px;
+  flex-grow: 0;
+  font-size: 12px;
+  padding: 8px 16px;
+  line-height: 16px;
+  margin: 0px 60px;
+}
+
 .quizInput {
   display: flex;
   flex-grow: 1;
   height: 100%;
-  margin-left: 244px;
   padding-left: 24px;
   padding-right: 24px;
   font-size: 20px;
