--- a/client/src/components/QuizPlay/NicknamePanel/index.module.scss
+++ b/client/src/components/QuizPlay/NicknamePanel/index.module.scss
@@ -30,28 +30,41 @@
 }
 
 .inner {
-  width: 320px;
   margin: auto;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+
+  @media (min-width: 0) {
+    width: 320px;
+  }
+
+  @media (min-width: 600px) {
+    width: 460px;
+  }
 }
 
 .label {
   font-weight: bold;
-  font-size: 14px;
-  line-height: 24px;
   color: #FFFFFF;
-  margin-bottom: 16px;
+
+  @media (min-width: 0) {
+    font-size: 14px;
+    line-height: 24px;
+    margin-bottom: 16px;
+  }
+
+  @media (min-width: 600px) {
+    font-size: 26px;
+    line-height: 44px;
+    margin-bottom: 26px;
+  }
 }
 
 .inputItem {
   position: relative;
   display: inline-block;
-  width: 288px;
-  height: 48px;
-  margin-bottom: 64px;
 
   &:after {
     content: '';
@@ -65,6 +78,18 @@
     opacity: 0.3;
     border-radius: 5px;
     pointer-events: none;
+  }
+
+  @media (min-width: 0) {
+    width: 288px;
+    height: 48px;
+    margin-bottom: 64px;
+  }
+
+  @media (min-width: 600px) {
+    width: 420px;
+    height: 80px;
+    margin-bottom: 64px;
   }
 }
 
@@ -93,4 +118,10 @@
   padding: 10px 16px;
   font-size: 14px;
   line-height: 20px;
+
+  @media (min-width: 600px) {
+    padding: 16px 24px;
+    font-size: 18px;
+    line-height: 20px;
+  }
 }
