--- a/client/src/components/QuizPlay/PinPanel/index.module.scss
+++ b/client/src/components/QuizPlay/PinPanel/index.module.scss
@@ -30,20 +30,36 @@
 }
 
 .inner {
-  width: 320px;
   margin: auto;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+
+  @media (min-width: 0) {
+    width: 320px;
+  }
+
+  @media (min-width: 600px) {
+    width: 460px;
+  }
 }
 
 .label {
   font-weight: bold;
-  font-size: 14px;
-  line-height: 24px;
   color: #FFFFFF;
-  margin-bottom: 16px;
+
+  @media (min-width: 0) {
+    font-size: 14px;
+    line-height: 24px;
+    margin-bottom: 16px;
+  }
+
+  @media (min-width: 600px) {
+    font-size: 26px;
+    line-height: 44px;
+    margin-bottom: 26px;
+  }
 }
 
 .inputsWrapper {
@@ -57,8 +73,6 @@
 .inputItem {
   position: relative;
   display: inline-block;
-  width: 40px;
-  height: 48px;
 
   &:after {
     content: '';
@@ -73,14 +87,22 @@
     border-radius: 5px;
     pointer-events: none;
   }
+
+  @media (min-width: 0) {
+    width: 40px;
+    height: 48px;
+  }
+
+  @media (min-width: 600px) {
+    width: 60px;
+    height: 80px;
+  }
 }
 
 .input {
   width: 100%;
   height: 100%;
   font-weight: bold;
-  font-size: 34px;
-  line-height: 46px;
   text-align: center;
   color: #FFFFFF;
   border-radius: 5px;
@@ -94,10 +116,26 @@
   &:focus {
     background: rgba(255, 255, 255, 0.2);
   }
+
+  @media (min-width: 0) {
+    font-size: 34px;
+    line-height: 46px;
+  }
+
+  @media (min-width: 600px) {
+    font-size: 54px;
+    line-height: 60px;
+  }
 }
 
 .button {
   padding: 10px 16px;
   font-size: 14px;
   line-height: 20px;
+
+  @media (min-width: 600px) {
+    padding: 16px 24px;
+    font-size: 18px;
+    line-height: 20px;
+  }
 }
