--- a/client/src/components/QuizPlay/Player/Question/index.module.scss
+++ b/client/src/components/QuizPlay/Player/Question/index.module.scss
@@ -35,51 +35,93 @@
 }
 
 .inner {
-  width: 288px;
   height: 100%;
   margin: auto;
+  
+  @media (min-width: 0) {
+    width: 288px;
+  }
+
+  @media (min-width: 600px) {
+    width: 480px;
+  }
 }
 
 .text {
-  margin-top: 24px;
-  margin-bottom: 16px;
   display: flex;
   width: 100%;
+
+  @media (min-width: 0) {
+    margin-top: 24px;
+    margin-bottom: 16px;
+  }
+
+  @media (min-width: 600px) {
+    margin-top: 45px;
+    margin-bottom: 20px;
+  }
 }
 
 .number {
   display: flex;
-  flex-basis: 32px;
   flex-grow: 0;
   justify-content: center;
   align-items: center;
-  width: 32px;
-  height: 32px;
   background: #24C9AE;
   border-radius: 50%;
   font-weight: bold;
-  font-size: 18px;
   color: #FFFFFF;
-  margin-right: 8px;
+
+  @media (min-width: 0) {
+    flex-basis: 32px;
+    width: 32px;
+    height: 32px;
+    font-size: 18px;
+    margin-right: 8px;
+  }
+
+  @media (min-width: 600px) {
+    flex-basis: 45px;
+    width: 45px;
+    height: 45px;
+    font-size: 26px;
+    margin-right: 10px;
+  }
 }
 
 .textInner {
-  margin-top: 5px;
   font-weight: bold;
-  font-size: 14px;
-  line-height: 24px;
   color: rgba(9, 21, 38, 0.85);
   flex-grow: 1;
   flex-basis: 0;
+
+  @media (min-width: 0) {
+    margin-top: 5px;
+    font-size: 14px;
+    line-height: 24px;
+  }
+
+  @media (min-width: 600px) {
+    margin-top: 8px;
+    font-size: 22px;
+    line-height: 28px;
+  }
 }
 
 .image {
   width: 100%;
-  height: 152px;
-  border-radius: 5px;
   background-size: cover;
   background-position: center center;
-  margin-bottom: 16px;
+
+  @media (min-width: 0) {
+    height: 152px;
+    border-radius: 5px;
+    margin-bottom: 16px;
+  }
+
+  @media (min-width: 600px) {
+    height: 280px;
+  }
 }
 
 .answers {
@@ -88,25 +130,54 @@
 }
 
 .answer {
-  margin-bottom: 8px;
   cursor: pointer;
   pointer-events: none;
   transition: opacity 200ms;
 
+  @media (min-width: 0) {
+    margin-bottom: 8px;
+  }
+
+  @media (min-width: 600px) {
+    margin-bottom: 10px;
+  }
+
   .answerMain {
-    height: 40px;
-    border-radius: 5px;
+    @media (min-width: 0) {
+      height: 40px;
+      border-radius: 5px;
+    }
+
+    @media (min-width: 600px) {
+      height: 50px;
+      border-radius: 6px;
+    }
   }
   
   .answerVariant {
-    font-size: 24px;
-    flex-basis: 40px;
-    width: 40px;
+    @media (min-width: 0) {
+      font-size: 24px;
+      flex-basis: 40px;
+      width: 40px;
+    }
+
+    @media (min-width: 600px) {
+      font-size: 28px;
+      flex-basis: 50px;
+      width: 50px;
+    }
   }
 
   .answerContentInner {
-    font-size: 14px;
     transition: background 200ms;
+
+    @media (min-width: 0) {
+      font-size: 14px;
+    }
+
+    @media (min-width: 600px) {
+      font-size: 22px;
+    }
   }
 
   &_clickable {
