--- a/client/src/components/QuizPlay/ResultPanel/Ladder/index.module.scss
+++ b/client/src/components/QuizPlay/ResultPanel/Ladder/index.module.scss
@@ -27,8 +27,16 @@
 
 .inner {
   display: flex;
-  width: 288px;
-  margin: 20px auto 80px;
+
+  @media (min-width: 0) {
+    width: 288px;
+    margin: 20px auto 80px;
+  }
+
+  @media (min-width: 600px) {
+    width: 460px;
+    margin: 40px auto 100px;
+  }
 }
 
 .ladder {
@@ -43,10 +51,19 @@
   width: 100%;
   text-align: center;
   font-weight: bold;
-  font-size: 16px;
-  line-height: 22px;
   color: #FFFFFF;
-  margin-bottom: 13px;
+
+  @media (min-width: 0) {
+    font-size: 16px;
+    line-height: 22px;
+    margin-bottom: 13px;
+  }
+
+  @media (min-width: 600px) {
+    font-size: 22px;
+    line-height: 30px;
+    margin-bottom: 22px;
+  }
 }
 
 .ladderContent {
@@ -66,31 +83,61 @@
   position: relative;
   display: flex;
   width: 100%;
-  height: 24px;
-  padding: 2px 8px;
   justify-content: space-between;
   align-items: center;
   
   &:not(:last-child) {
-    margin-bottom: 8px;
+    @media (min-width: 0) {
+      margin-bottom: 8px;
+    }
+
+    @media (min-width: 600px) {
+      margin-bottom: 15px;
+    }
+  }
+
+  @media (min-width: 0) {
+    height: 24px;
+    padding: 2px 8px;
+  }
+
+  @media (min-width: 600px) {
+    height: 38px;
+    padding: 6px 15px;
   }
 }
 
 .ladderItemNickname {
   flex-grow: 1;
   font-weight: bold;
-  font-size: 14px;
-  line-height: 20px;
   color: #FFFFFF;
+
+  @media (min-width: 0) {
+    font-size: 14px;
+    line-height: 20px;
+  }
+
+  @media (min-width: 600px) {
+    font-size: 20px;
+    line-height: 30px;
+  }
 }
 
 .ladderItemScore {
   flex-grow: 0;
   font-weight: bold;
-  font-size: 14px;
-  line-height: 20px;
   text-align: right;
   color: #FFFFFF;
+
+  @media (min-width: 0) {
+    font-size: 14px;
+    line-height: 20px;
+  }
+
+  @media (min-width: 600px) {
+    font-size: 20px;
+    line-height: 30px;
+  }
 }
 
 .ladderItemProgress {
@@ -115,10 +162,20 @@
   height: 80px;
 
   .button {
-    border-radius: 6px;
-    padding: 10px 16px;
-    font-size: 14px;
-    line-height: 20px;
     color: rgba(9, 21, 38, 0.85);
+
+    @media (min-width: 0) {
+      border-radius: 6px;
+      padding: 10px 16px;
+      font-size: 14px;
+      line-height: 20px;
+    }
+
+    @media (min-width: 600px) {
+      border-radius: 8px;
+      padding: 10px 22px;
+      font-size: 18px;
+      line-height: 30px;
+    }
   }
 }
